Fixed text size on mobile
added <meta name="viewport" content="width=device-width,initial-scale=1"> to fix the text sizing on high pixel density devices

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <title>Send Bulk SMS</title>
     <link rel="icon" type="image/x-icon" href="/style/favicon.png">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <meta name="description" content="A simple interface to send bulk messages using the Telnyx API.">
     <meta name="robots" content="all">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
