--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
                             </div>
                             <div id="accountBalance" class="sms-error-output"></div>
                             <div id="sentMessages" class="sms-error-output"></div>
-                            <div id="sendErrors" class="sms-error-output"></div>
-                            <div id="duplicateNumbers" class="sms-error-output"></div>
+                            <div id="sendErrors" class="sms-error-output sms-error-output-overflow"></div>
+                            <div id="duplicateNumbers" class="sms-error-output sms-error-output-overflow"></div>
                         </div>
                     </div>
                     <div class="content-block__text sms-numbers-right">
