--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                             <div id="accountBalance" class="sms-error-output"></div>
                             <div id="sentMessages" class="sms-error-output"></div>
                             <div id="sendErrors" class="sms-error-output sms-error-output-overflow"></div>
+                            <div id="missingCountryCodeErrors" class="sms-error-output sms-error-output-overflow"></div>
                             <div id="duplicateNumbers" class="sms-error-output sms-error-output-overflow"></div>
                         </div>
                     </div>
@@ -125,5 +126,4 @@
 <script src="scripts/post.js" type="text/javascript"></script>
 <script src="scripts/script.js" type="text/javascript"></script>
 <script src="scripts/utilities.js" type="text/javascript"></script>
-
 </html>
