--- a/index.html
+++ b/index.html
@@ -126,4 +126,5 @@
 <script src="scripts/post.js" type="text/javascript"></script>
 <script src="scripts/script.js" type="text/javascript"></script>
 <script src="scripts/utilities.js" type="text/javascript"></script>
+<script src="https://unpkg.com/libphonenumber-js@1.9.9/bundle/libphonenumber-min.js" type="text/javascript"></script>
 </html>
