--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Send Bulk SMS</title>
     <link rel="icon" type="image/x-icon" href="/style/favicon.png">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="A simple interface to send bulk messages using the Telnyx API.">
+    <meta name="description" content="A simple interface to send bulk sms messages using the Telnyx API.">
+    <meta content="Telnyx, Telnyx API, Bulk SMS, Bulk Text, Send SMS, Send Text, Alphanumeric, SMS, Test Message" name="keywords">
     <meta name="robots" content="all">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
     <link href="style/style.css" rel="stylesheet" type="text/css" />
